@@ -3,6 +3,7 @@
   -added Dampe back in, he got lost in the reorganization, oops
   -fixed Bombchu Bowling has 2 prizes
   -fixed item capture on Darunias Joy
+  -fixed colossus area logic
 1.0.0.4:
   -added small key counters
   -started adding open/closed forest/door logic
